# verify

./: .gitignore  AGENTS.md  README.md  alembic.ini  improvements.md  pyproject.toml
alembic/: env.py
alembic/versions/: 49b4bae7abe8_add_exec_command_to_test_definitions.py  9dd873fe2bd5_initial.py
docs/: manager-guide.md  user-guide.md  validation-guide.md
examples/: README.md  api-requirements.csv  kubernetes-requirements.csv  run_all.py  webui-requirements.csv
examples/api/: test_auth.py  test_error_format.py
examples/kubernetes/: test_network_policy.py  test_pod_security.py  test_resource_limits.py
examples/webui/: test_login_page.py  test_page_quality.py
scripts/: build-binary.sh
tests/: conftest.py  test_campaigns.py  test_evidence.py  test_requirements.py
verify/campaigns/: models.py  service.py
verify/cli/: campaigns.py  evidence_commands.py  export.py  help.py  main.py  requirements.py  tests.py  tui.py
verify/definitions/: models.py  service.py
verify/evidence/: models.py  service.py
verify/reporting/: service.py
verify/requirements/: models.py  service.py
verify/shared/: __init__.py  database.py  exceptions.py  models.py  security.py
